--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -1,35 +1,90 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[](maroon)\
-$os\
-$username\
-[](bg:peach fg:maroon)\
-$directory\
-[](fg:peach bg:yellow)\
-$git_branch\
-$git_status\
-[](fg:yellow bg:teal)\
-$c\
-$rust\
-$golang\
-$nodejs\
-$php\
-$java\
-$kotlin\
-$haskell\
-$python\
-[](fg:teal bg:blue)\
-$docker_context\
-$conda\
-[](fg:blue bg:lavender)\
 $time\
-[ ](fg:lavender)\
-$line_break$character"""
+$all"""
 
 # Sets user-defined palette
 # Palettes must be defined _after_ this line
 palette = "catppuccin_mocha"
+
+[time]
+disabled = false
+time_format = "%R"
+style = "rosewater bold"
+format = '[  $time ]($style)'
+
+[username]
+show_always = true
+style_user = "pink bold"
+style_root = "red bold"
+
+[directory]
+style = "peach bold"
+truncation_length = 4
+truncation_symbol = "…/"
+
+[git_branch]
+symbol = ""
+style = "green bold"
+
+[git_status]
+style = "green bold"
+
+[nodejs]
+symbol = ""
+style = "sky bold"
+
+[c]
+symbol = " "
+style = "sky bold"
+
+[rust]
+symbol = ""
+style = "sky bold"
+
+[golang]
+symbol = ""
+style = "sky bold"
+
+[php]
+symbol = ""
+style = "sky bold"
+
+[java]
+symbol = " "
+style = "sky bold"
+
+[kotlin]
+symbol = ""
+style = "sky bold"
+
+[haskell]
+symbol = ""
+style = "sky bold"
+
+[python]
+symbol = ""
+style = "sky bold"
+
+[docker_context]
+symbol = ""
+style = "blue bold"
+
+[conda]
+style = "lavender bold"
+
+[line_break]
+disabled = false
+
+[character]
+disabled = false
+success_symbol = '[](bold green)'
+error_symbol = '[](bold red)'
+vimcmd_symbol = '[](bold green)'
+vimcmd_replace_one_symbol = '[](bold mauve)'
+vimcmd_replace_symbol = '[](bold mauve)'
+vimcmd_visual_symbol = '[](bold yellow)'
 
 # Palette definitions
 [palettes.catppuccin_latte]
@@ -42,8 +97,8 @@ maroon = "#e64553"
 peach = "#fe640b"
 yellow = "#df8e1d"
 green = "#40a02b"
-teal = "#179299"
-sky = "#04a5e5"
+sky = "#179299"
+teal = "#04a5e5"
 sapphire = "#209fb5"
 blue = "#1e66f5"
 lavender = "#7287fd"
@@ -70,8 +125,8 @@ maroon = "#ea999c"
 peach = "#ef9f76"
 yellow = "#e5c890"
 green = "#a6d189"
-teal = "#81c8be"
-sky = "#99d1db"
+sky = "#81c8be"
+teal = "#99d1db"
 sapphire = "#85c1dc"
 blue = "#8caaee"
 lavender = "#babbf1"
@@ -144,128 +199,4 @@ base = "#1e1e2e"
 mantle = "#181825"
 crust = "#11111b"
 
-[os]
-disabled = false
-style = "bg:maroon fg:surface0"
 
-[os.symbols]
-Windows = "󰍲"
-Ubuntu = "󰕈"
-SUSE = ""
-Raspbian = "󰐿"
-Mint = "󰣭"
-Macos = "󰀵"
-Manjaro = ""
-Linux = "󰌽"
-Gentoo = "󰣨"
-Fedora = "󰣛"
-Alpine = ""
-Amazon = ""
-Android = ""
-Arch = "󰣇"
-Artix = "󰣇"
-EndeavourOS = ""
-CentOS = ""
-Debian = "󰣚"
-Redhat = "󱄛"
-RedHatEnterprise = "󱄛"
-
-[username]
-show_always = true
-style_user = "bg:maroon fg:surface0"
-style_root = "bg:maroon fg:surface0"
-format = '[ $user ]($style)'
-
-[directory]
-style = "fg:surface0 bg:peach"
-format = "[ $path ]($style)"
-truncation_length = 4
-truncation_symbol = "…/"
-
-[directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = "󰝚 "
-"Pictures" = " "
-"Developer" = "󰲋 "
-
-[git_branch]
-symbol = ""
-style = "bg:yellow"
-format = '[[ $symbol $branch ](fg:surface0 bg:yellow)]($style)'
-
-[git_status]
-style = "bg:yellow"
-format = '[[($all_status$ahead_behind )](fg:surface0 bg:yellow)]($style)'
-
-[nodejs]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[c]
-symbol = " "
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[rust]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[golang]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[php]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[java]
-symbol = " "
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[kotlin]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[haskell]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[python]
-symbol = ""
-style = "bg:teal"
-format = '[[ $symbol( $version) ](fg:surface0 bg:teal)]($style)'
-
-[docker_context]
-symbol = ""
-style = "bg:blue"
-format = '[[ $symbol( $context) ](fg:surface0 bg:blue)]($style)'
-
-[conda]
-style = "bg:blue"
-format = '[[ $symbol( $environment) ](fg:surface0 bg:blue)]($style)'
-
-[time]
-disabled = false
-time_format = "%R"
-style = "bg:lavender"
-format = '[[  $time ](fg:surface0 bg:lavender)]($style)'
-
-[line_break]
-disabled = false
-
-[character]
-disabled = false
-success_symbol = '[](bold fg:green)'
-error_symbol = '[](bold fg:red)'
-vimcmd_symbol = '[](bold fg:green)'
-vimcmd_replace_one_symbol = '[](bold fg:mauve)'
-vimcmd_replace_symbol = '[](bold fg:mauve)'
-vimcmd_visual_symbol = '[](bold fg:yellow)'
