--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -1,12 +1,18 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
+$fill
 $time\
 $all"""
 
 # Sets user-defined palette
 # Palettes must be defined _after_ this line
 palette = "catppuccin_mocha"
+
+[fill]
+symbol = "_"
+style = "mantle"
+disabled = false
 
 [time]
 disabled = false
